# ChangeLog for sys-devel/bc
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/bc/ChangeLog,v 1.41 2012/04/26 13:55:58 aballier Exp $

  26 Apr 2012; Alexis Ballier <aballier@gentoo.org> bc-1.06.95-r1.ebuild:
  keyword ~amd64-fbsd

  27 Mar 2012; Mike Frysinger <vapier@gentoo.org> bc-1.06.95.ebuild,
  bc-1.06.95-r1.ebuild:
  Migrate to gnu-alpha mirror.

  15 Feb 2011; Fabian Groffen <grobian@gentoo.org> bc-1.06.95-r1.ebuild:
  Marked ~sparc64-solaris

*bc-1.06.95-r1 (26 Dec 2010)

  26 Dec 2010; Mike Frysinger <vapier@gentoo.org> +bc-1.06.95-r1.ebuild,
  +files/bc-1.06.95-void_uninitialized.patch:
  Fix uninitialized memory usage #349339 by David Flogeras. Convert to
  EAPI=2 for fun.

  05 Feb 2010; Alexis Ballier <aballier@gentoo.org> bc-1.06.95.ebuild:
  freebsd-lib does not ship libedit anymore

  15 Jan 2010; Christian Faulhammer <fauli@gentoo.org> bc-1.06.95.ebuild:
  Transfer Prefix keywords

  09 Jun 2008; Jeroen Roovers <jer@gentoo.org> bc-1.06.95.ebuild:
  Stable for HPPA (bug #224863).

  07 Jun 2008; Kenneth Prugh <ken69267@gentoo.org> bc-1.06.95.ebuild:
  amd64 stable, bug #224863

  07 Jun 2008; nixnut <nixnut@gentoo.org> bc-1.06.95.ebuild:
  Stable on ppc wrt bug 224863

  07 Jun 2008; Raúl Porcel <armin76@gentoo.org> bc-1.06.95.ebuild:
  ia64/sparc stable wrt #224863

  06 Jun 2008; Christian Faulhammer <opfer@gentoo.org> bc-1.06.95.ebuild:
  stable x86, bug 224863

  05 Jun 2008; Tobias Klausmann <klausman@gentoo.org> bc-1.06.95.ebuild:
  Stable on alpha, bug #224973

  05 Jun 2008; Markus Rothe <corsair@gentoo.org> bc-1.06.95.ebuild:
  Stable on ppc64; bug #224863

  31 Dec 2006; Mike Frysinger <vapier@gentoo.org> bc-1.06-r6.ebuild,
  bc-1.06.95.ebuild:
  Punt old flag filters and use emake in install.

  18 Oct 2006; Roy Marples <uberlord@gentoo.org> bc-1.06.95.ebuild:
  Added ~sparc-fbsd keyword.

*bc-1.06.95 (05 Sep 2006)
