@@ -3,10 +3,10 @@ DEPEND=readline? ( >=sys-libs/readline-4.1 >=sys-libs/ncurses-5.2 ) libedit? ( d
 DESCRIPTION=Handy console-based calculator utility
 HOMEPAGE=http://www.gnu.org/software/bc/bc.html
 IUSE=libedit readline static
-KEYWORDS=alpha amd64 arm hppa ia64 m68k ~mips ppc ppc64 s390 sh sparc x86 ~ppc-aix ~sparc-fbsd ~x86-fbsd ~x86-freebsd ~ia64-hpux ~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~m68k-mint ~sparc-solaris ~x64-solaris ~x86-solaris
+KEYWORDS=alpha amd64 arm arm64 hppa ia64 m68k ~mips ppc ppc64 s390 sh sparc x86 ~ppc-aix ~sparc-fbsd ~x86-fbsd ~x86-freebsd ~ia64-hpux ~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~m68k-mint ~sparc-solaris ~x64-solaris ~x86-solaris
 LICENSE=GPL-2 LGPL-2.1
 RDEPEND=readline? ( >=sys-libs/readline-4.1 >=sys-libs/ncurses-5.2 ) libedit? ( dev-libs/libedit )
 SLOT=0
 SRC_URI=mirror://gnu-alpha/bc/bc-1.06.95.tar.bz2 mirror://gnu/bc/bc-1.06.95.tar.bz2
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	c263990f1b677b0f0be0a3299f179762	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
-_md5_=0e81231e2a0f5d0bfa53491e29db93d7
+_md5_=e3d68cd644ba5cdbdd5ef055622fcd81
