@@ -1,16 +1,26 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-AUX bc-1.06.95-void_uninitialized.patch 351 RMD160 ddf88b268b16975378dabe9290724f3b8c4d1925 SHA1 c6f8d7a3081990273aa8a8574fc67327043f78b5 SHA256 440a9a20633317204a0205962f573a932ef4493b1dc9ff3253bfed22c8caf5cd
-DIST bc-1.06.95.tar.bz2 290069 RMD160 d58c2d7a1f4b7bfa910f26e5809f3169a6e0da76 SHA1 18717e0543b1dda779a71e6a812f11b8261a705a SHA256 7ee4abbcfac03d8a6e1a8a3440558a3d239d6b858585063e745c760957725ecc
-EBUILD bc-1.06.95-r1.ebuild 1397 RMD160 e5f488d15242986a63546b999e42164d60aee143 SHA1 6222e261a5d53a44818ab73d543f7e58f468f25e SHA256 bb071ff7d1b9dc258381d9b68fe0c96c0d85dd0d5fae29989d6d962fbea5c73d
-EBUILD bc-1.06.95.ebuild 1298 RMD160 9cdfcf6f3ccc9cdb0c4b6787a9924c0f6eab8e56 SHA1 0473b824f005b03ecc721951e7c29c68765daff5 SHA256 7211a0f1abb703fa4fc4fa7ecc49179aed7482f5445e4fddc7033bae142fd68c
-MISC ChangeLog 4971 RMD160 21db57f2f1280118cbbb22e8f1cbe0069e7772fa SHA1 58b827e5570a7c5360dce0ae5741ebd92612706c SHA256 c76dd71a48a8677ede7cb8ce83f548b7d96e6943a54b7f007b4a0315874f98c4
-MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
+AUX bc-1.06.95-void_uninitialized.patch 351 SHA256 440a9a20633317204a0205962f573a932ef4493b1dc9ff3253bfed22c8caf5cd SHA512 6d2803d831d8a3137c3d867606f8d40455a6f984bfe844e10e276e24cbd5d9fd1ff21b81ea91775dd7e1e55484cdde7bf859fa3e9a17887bdf548b32cdc46dae WHIRLPOOL be26b8f81e119247095a0d2c8b8131f507454ac5c087ab32da1fdce8023080286ec125ae3b7bf06b2e690498bb78b32a7e7ff78ae8cd81038904bb7168e5f620
+DIST bc-1.06.95.tar.bz2 290069 SHA256 7ee4abbcfac03d8a6e1a8a3440558a3d239d6b858585063e745c760957725ecc SHA512 16ec13f87ef76ad4de77d378ef8d65a582adca1bf661c9d7675e78d940680c77e81a00a01817fde7c1ad1524562d6f933caa5c42a0686f3f85aadbb39393afb1 WHIRLPOOL e91adb7b1fd42c4d47dad76f994c51ee7a8d962a24cb1b0cbeaa992fe1be59878016d5883506ec4153293daf48fbe3f345bb88fbe3f6276b3353c89573a612af
+EBUILD bc-1.06.95-r1.ebuild 1468 SHA256 6a57f375cabc9c7adbcb9861a5d573e400445945fddc9e55f2a9a3860411a84a SHA512 a6fa9740087ad54d6ad74bf7821dec8495155eacafb264c78c5a26c5825251fcf87b08ae98cd3a3b6aaad2c18720d327d317c79806ce357576d7ecc65200703f WHIRLPOOL 9298a7c4c41481d70d42d2e9310a121aea197eed4ebdae416c1c8e60293535ed3d67697509d1b7a2afccc521d57a0272332f53cd3697208b3cfb93678d8f762c
+EBUILD bc-1.06.95.ebuild 1304 SHA256 508bce6a018bda71eb3afd0754bc25d3f4e28299e9973a89ee7520992c05f05d SHA512 56ef39b8f342f88d584cfbad4caacee503c06ac032b7a90ed57d73f85e9d7f9f25cf951d04e0de4b728d4a1eb8de006fc613d3014c03368fceb6586d539c71ea WHIRLPOOL 017b0405eeb0cbf7264d2c082377b78b42252ef0cbeb83c6ed109406a9ed2cadee6a0e16b6d484da114d3240b15edd2631e9573a17418f377cf1e8dbb881d8e6
+MISC ChangeLog 5183 SHA256 c3cf51a53a0ff9a5454999db83f27bab9fa3aaa00c9194cc0f948d2b8b96df68 SHA512 4ed56654b8af1cfc08a3954ab9139b835111ad0170869c3fb703bd67a514bb1053f1daf44180f8b66dd6f6b40b4d5243687becd11461fe0f9958fb7459d532cf WHIRLPOOL 472e520074b978c21c8f72821205e398bdf76a67beb11b326c0690b14ebbcc67285c96dd03b13d4f1b8f876f96b3311b644912e008b2e9261d97c769f85ac5ae
+MISC metadata.xml 164 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 SHA512 8eb0d5153d388f6ea069c64b93882244816a0a09aecc0d73cb872121ce0eb24c5ccafa96aad0b620b2300f319e1af101fa7fa6c5d0d561719d49bb07da0a2eca WHIRLPOOL 11a1441bddb7a6c69653c663902b7da5767ae6ad515ac2aabfc42fe37927a1ccc21472deeee454009ff720201a41c3e4a912df42661a0a87150fb46126da2d52
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEARECAAYFAk+ZU/QACgkQvFcC4BYPU0qp5gCcCG2KmlAE1vjzYPQ7cI+q1bZM
-WMsAn1OAf+txjMXRtCNhx0BjSCnd1HIv
-=BEOw
+iQIcBAEBCAAGBQJS2fBEAAoJEPGu1DbS6WIAMlIP/i1NejaSYeLUszjmj9TU8PgD
+27p7xOYlXwhj7k7NrEtQh1liOTarnQ0cGIXknrUAoCmlkOyFJ0RJOVwMyBO3Md8C
+Y7Kea3oLLeCpHe7fXHwubQzy2Hj9nhJx3ITs2DujCDTpOw43/bwRM8SqjCSh4u1A
+U1s7n/Rxr/jni/YBqbfiw9aisygD3MgmbBnuuRf5QMd4CBRe5uIJ8DiHxjDUAiMY
+mPBwLOjzq4lJzprBva58tFXcFPsUiXrLQU4zb5Qfjup4bF6VAcak/T5l48wvVqWs
+7yv3DsNA5kEZeFxNKstd6ozNIDvpkfz591PMoOI1W0Gg+Im9cgGR4z5oA8mN5upp
+JSJPzPRjkvSvgAAH1G85MC9jGXo2MktIqTFhKbZk3UmC35ADA6s9EhBeoGKW4/F0
++zD9ldmADLpJiBPY5PPsxfCl3wMNj6LjE+YawOPhNmFFzEJFnEobhxY8UBdUfEd4
+VQn6slp2dS5MF1S9XqKi3PnY1o468oOU+bZ3dGlyC+NEi6O5+kpSk9OS3SsS9Gtn
+lHIV1azxL0Sz5SkdvR/EsMokKSR8xDs1Y6r/yw2Si4Pcbl5kirb2XQE8LD9g9AZM
+5JoEVIlxdrUcBrls9u+9xX/o00IswIqxs4CSVr9zDJOkfTszkgMVB328N8m9J0Xz
+oeqk2t/ORpjzCsH/gRWl
+=C+h3
 -----END PGP SIGNATURE-----
